--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
 header{
     color: red;
 }
+.logo-image{
+    margin: 5px;
+}
+.navbar-expand-lg .navbar-collapse{
+    justify-content: center;
+}
