--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,1 +1,7 @@
-
+main{
+    height: 80vh;
+    background: url(https://images.unsplash.com/photo-1578328819058-b69f3a3b0f6b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
