--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,3 +45,16 @@ a{
     background-size:cover;
   }
   
+.wrapper{
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.wrapper .wrapper__video{
+  object-fit: cover;
+  width: 100%;
+  height: 80%;
+}
+
+  
